tests/neg-custom-args/captures/lazylists-exceptions.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists-exceptions.scala:37:17 -------------------------
37 |    tabulate(10) { i =>  // error
   |    ^
   |    Found:    LazyList[Int]^{canThrow$1}
   |    Required: LazyList[Int]^'s1
   |
   |    Note that capability canThrow$1, defined in method try$1
   |    cannot be included in outer capture set 's1 of method problem which is owned by method problem.
38 |      if i > 9 then throw Ex1()
39 |      i * i
40 |    }
   |
   | longer explanation available when compiling with `-explain`
